--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   flutter_slider_drawer: ^2.1.3
   emoji_picker_flutter: ^1.6.1
   shaky_animated_listview: ^0.0.5
+  intl: ^0.18.1
+  intl_phone_field: ^3.2.0
 
 dev_dependencies:
   flutter_test:
